2015-11-24  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml/__init__.py, typhon/arts/xml/write.py:

	(ARTSXMLWriter) Refactor write_* routines into a class. Use properties
	to track filepointer, precision and binary filepointer.
	Creates cleaner interface for the individual write_* methods.

	Removed ARTSTag class. Functionality is now provided by ARTSXMLWriter.

	* typhon/arts/griddedfield.py (GriddedField.write_xml):

	Replace fp, precision and binaryfp argument with an ARTSXMLWriter.

	Removed dependency on ARTSTag and xml.write_xml.

	* typhon/arts/xml/__init__.py (save): Use ARTSXMLWriter.

2015-11-24  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml/read.py (ARTSTypesLoadMultiplexer):

	Fix reading of zero-sized matpack types.

	* typhon/arts/xml/write.py (write_ndarray):

	Fix writing of zero-sized matpack types.

	* typhon/arts/xml/tests/test_matpack_types.py:

	Add tests for reading/writing empty matpack variables.

2015-11-24  Oliver Lemke  <olemke@core-dump.info>

	* doc/arts.rst:

	Add GriddedField docs. Add additional subsection level.

	Divide docs in user and developer sections. Needs to be split into
	separate pages when more content is added.

	* doc/modules.rst: Show up to level 3 in toc.


	* typhon/arts/griddedfield.py:

	Add GriddedField to __all__ for documentation purposes.

	Test internal Sphinx references with :class:`CLASSNAME`.

	* typhon/arts/xml/read.py:

	Remove _ from _ARTSTypesLoadMultiplexer and _ARTSElement.

	* typhon/arts/xml/write.py: Add more docstrings.

2015-11-24  Oliver Lemke  <olemke@core-dump.info>

	* typhon/arts/xml/__init__.py, typhon/arts/xml/names.py,
	typhon/arts/xml/read.py, typhon/arts/xml/write.py:

	Turn arts.xml from a package into a module. Split reading and writing
	routines into different packages to break circular dependency.

	* typhon/arts/xml/tests: Moved xml test cases into module directory.
	
	* typhon/arts/types.py: Uncomment GriddedFields.
